src/components/UserSchedule.css
.schedule_page {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 150px;
}

.user_schedule_container {
  display: grid;
  width: 80%;
  max-width: 1200px;
  grid-template-columns: auto repeat(7, 1fr);
  grid-row-gap: 2px;
  grid-column-gap: 1px;
  margin-bottom: 40px;
}

.user_schedule_shift {
  display: flex;
  align-items: center;
  justify-content: center;
	background: rgba(38, 165, 106, .1);
  color: #112138;
}

.user_schedule_shift:hover {
  cursor: pointer;
}

.user_schedule_position {
  background: rgba(24, 30, 64, 25);
  text-align: center;
  color: rgba(38, 165, 106, 65);
  padding: 3px;
}

.user_schedule_name {
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(24, 30, 64, 25);
  color: rgba(38, 165, 106, .1);;
  padding: 15px;
}

.contact_links {
  color: white;
  text-decoration: none;
}

.contact_links:hover {
  color:rgba(242, 201, 79, .9);
}

.user_schedule_days {
  background: rgba(24, 30, 64, 25);
  color: #D2F7F3;
  text-align: center;
}

.user_day_number {
  color:rgba(38, 165, 106, 65);
}

.select_save {
  margin: 100px 0 20px 0;
} 

.MuiInputBase-input {
  background: rgba(242, 201, 79, 0.2);
}

.MuiInputBase-root.MuiInput-root.MuiInput-underline {
  background: rgba(242, 201, 79, 0.2);
  border-radius: 3px;
  padding: 10px;
}

.MuiSvgIcon-root.MuiSelect-icon {
  color: #112138;
}

.Mui-focused.schedule_select {
  background: rgba(242, 201, 79, 0.2);
}
.user_current_month {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 100px 0 20px 0;
}

.user_current_schedule_update_button {
  font-size: 20px;
  width: 100%;
  margin-bottom: 5px;
  padding: 10px;
  transition: background .5s;
}

.updating {
  background: rgba(242, 201, 79, 95);
}

.updated {
  background: rgba(242, 201, 79, 0.2);
}

.user_month_row-selected {
  margin-bottom: 40px;
}
.user_selected_month {
  max-width: 1200px;
}

.user_selected_month {
  font-size: 40px;
  color: #112138;
  margin-bottom: 10px;
}

.month-current {
  font-size: 40px;
  margin-bottom: 10px;
  color: #112138;
}

.current, .logged_in {
  background: rgba(242, 201, 79, 95);
  color: #112138;
  text-align: center;
}

.green {
  color: rgba(38, 165, 106, 65);
  font-weight: bold;
  font-size: 18px;
}

.red {
  color: rgba(216, 73, 73, 85);
  font-weight: bold;
  font-size: 18px;
}

@media only screen and (max-width: 1200px) {
  .user_schedule_container, .selected_month {
    width: 85%;
  }
}

@media only screen and (max-width: 1100px) {
  .user_schedule_container, .selected_month {
    width: 90%;
  }
}

@media only screen and (max-width: 1000px) {
  .user_schedule_container, .selected_month {
    width: 95%;
  }
}

@media only screen and (max-width: 768px) {
  .user_schedule_container, .selected_month {
    width: 95%;
  }

  .user_schedule_container > *, .red, .green {
    font-size: 14px;
  }

  .month-current, .user_selected_month {
    font-size: 30px;
  }
}
@media only screen and (max-width: 550px) {
  .user_schedule_container > *, .red, .green {
    font-size: 12px;
  }

  .month-current, .user_selected_month {
    font-size: 25px;
  }
  .user_schedule_position {
    padding: 1px;
  }
}

